Thu Jun 10 15:10:34 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * DAnCE/tests/CIAO/CommandlinePassage/run_test.pl:
        * DAnCE/tests/LocalityManager/SpawnMultiple/run_test.pl:
        * DAnCE/tests/LocalityManager/SpawnOne/run_test.pl:
        * DAnCE/tests/Parsing/PlanLauncher/descriptors/run_test.pl:
        * DAnCE/tests/Parsing/PlanLauncher/descriptors/run_test_msm.pl:
        * connectors/ami4ccm/examples/Hello/descriptors/run_test.pl:
        * connectors/ami4ccm/tests/AsynchT/descriptors/run_test.pl:
        * connectors/ami4ccm/tests/DelReplyH/descriptors/run_test.pl:
        * connectors/ami4ccm/tests/Exceptions/descriptors/run_test.pl:
        * connectors/ami4ccm/tests/InterInArgs/descriptors/run_test.pl:
        * connectors/ami4ccm/tests/InterMulti/descriptors/run_test.pl:
        * connectors/ami4ccm/tests/InterOutArgs/descriptors/run_test.pl:
        * connectors/ami4ccm/tests/InterReturn/descriptors/run_test.pl:
        * connectors/ami4ccm/tests/NoReplyH/descriptors/run_test.pl:
        * connectors/ami4ccm/tests/OneProcess/descriptors/run_test.pl:
        * connectors/ami4ccm/tests/OneReplyH/descriptors/run_test.pl:
        * connectors/ami4ccm/tests/UsesMulti/descriptors/run_test.pl:
        * connectors/dds4ccm/performance-tests/Latency/descriptors/run_test.pl:
        * connectors/dds4ccm/tests/CSLUnexpStat/descriptors/run_test.pl:
        * connectors/dds4ccm/tests/CoherentUpdater/descriptors/run_test.pl:
        * connectors/dds4ccm/tests/CoherentWriter/descriptors/run_test.pl:
        * connectors/dds4ccm/tests/Getter/descriptors/run_test.pl:
        * connectors/dds4ccm/tests/PSLDeadline/descriptors/run_test.pl:
        * connectors/dds4ccm/tests/PortUsage/descriptors/run_test.pl:
        * connectors/dds4ccm/tests/Reader/descriptors/run_test.pl:
        * connectors/dds4ccm/tests/SharedDomainParticipant/SameDatatype/descriptors/run_test.pl:
        * connectors/dds4ccm/tests/State_Connection_Test/descriptors/run_test.pl: