@@ -1,3 +1,9 @@
+Thu Jun 10 15:20:31 UTC 2010  Marijke Hengstmengelt  <mhengstmengel@remedy.nl>
+
+        * connectors/ami4ccm/tests/OneReplyH/Receiver/OneReplyH_Receiver_exec.cpp
+        * connectors/ami4ccm/tests/OneReplyH/Sender/OneReplyH_Sender_exec.cpp
+        Solve compile warnings.
+        
 Thu Jun 10 15:10:34 UTC 2010  Marcel Smit  <msmit@remedy.nl>
 
         * DAnCE/tests/CIAO/CommandlinePassage/run_test.pl:
